# cPsystem_example_cpp

./: CMakeLists.txt  README  build.sh  run.sh  win_build.bat  win_run.bat
header/: atom.h  multiset.h  program.h  simplesystem.h
source/: main.cxx  multiset.cxx  program.cxx
